feat: add findAll endpoint